--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Responsive portfolio website",
   "main": "index.js",
-  "homepage": "https://juneldanao.github.io/new/",
+  "homepage": "https://juneldanao.github.io/responsive/",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
