--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
   
   },
   "author": "Brad Traversy",
