--- a/package.json
+++ b/package.json
@@ -3,15 +3,12 @@
   "version": "1.0.0",
   "description": "Responsive portfolio website",
   "main": "index.js",
-  "homepage": "https://juneldanao.github.io/responsive/",
+  "homepage": "https://juneldanao.github.io/new/",
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "gh-pages -d dist",
     "deploy": "gh-pages -d build",
     "sass": "node-sass -w scss/ -o dist/css/ --recursive"
-  
   },
-  "author": "Brad Traversy",
-  "license": "MIT",
   "dependencies": {
     "gh-pages": "^1.2.0",
     "node-sass": "^4.12.0"
