--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "modern_portfolio",
   "version": "1.0.0",
   "description": "Responsive portfolio website",
-  "main": "index.js",
-  "homepage": "https://juneldanao.github.io/new/",
+  "main": "index.html",
+  "homepage": "https://juneldanao.github.io/responsive/",
   "scripts": {
     "predeploy": "gh-pages -d dist",
     "deploy": "gh-pages -d build",
